wp-content/themes/nok-2025-v1/assets/css/components/_nok-images.scss
@use "shared" as components-base;

@mixin cover-image {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center center;
}

@mixin commmon-styles {
  //
}

.wp-block-image {

  &.size-large,
  &.size-full,
  &:has(.size-large),
  &:has(.size-full) {
    &:has(figcaption) {
      margin-top: var(--nok-space-fluid-lg);
      margin-bottom: var(--nok-space-fluid-md);
    }
    margin-block: var(--nok-space-fluid-lg);
  }

  > img,
  > a > img,
  figure > img,
  figure > a > img {
    @include components-base.nok-border-radius('large');
  }
  &.alignleft {
    float: left;
    margin: 0 var(--nok-space-fluid-lg) var(--nok-space-fluid-sm) 0;
  }
  &.alignright {
    float: right;
    margin: 0 0 var(--nok-space-fluid-sm) var(--nok-space-fluid-lg);
  }
  &.size-large img {
    width: 100%;
  }
}

.nok-image {
  @include commmon-styles;

  &-natural-fit {
    &-width {
      @include commmon-styles;
      img {
        width: 100%;
        height: auto;
        margin-block: auto;
      }
    }
    &-height {
      @include commmon-styles;
      img {
        height: 100%;
        width: auto;
        margin-inline: auto;
      }
    }
  }

  &-square {
    @include commmon-styles;
    @include cover-image;
    aspect-ratio: 1 / 1;

    &-portrait {
      @include commmon-styles;
      @include cover-image;
      aspect-ratio: 1 / 1;
      display: flex;
      align-items: stretch;
      justify-content: center;

    }
  }

  &-cover {
    @include commmon-styles;
    img {
      @include cover-image;
    }
  }

  &-perspective {
    perspective: 100cqi;
    img {
      transform-style: preserve-3d;
      transform-origin: center;
      @at-root nok-section[data-visible="true"] & {
        @include components-base.transition-properties {
          animation: perspective-rotation 4s ease-in-out 0s;
          animation-fill-mode: forwards;
        }
      }
    }
  }

  &-full-width {
    @include commmon-styles;
    img {
      width: 100%;
      height: auto;
    }

    &-cover {
      @include commmon-styles;
      img {
        @include cover-image;
      }
    }
  }

  &-cover-blur {
    &-container {
      @include components-base.nok-border-radius('large');
      @include components-base.nok-subtle-shadow;
      position: relative;
      overflow: hidden;
    }
    &-ghost {
      display: block;
      width: 100% !important;
      height: 100% !important;
      object-fit: fill;
      object-position: center center;
      position: absolute;
      z-index: 1;
      inset: 0;
      @include components-base.compensated-blur;
      ~ img {
        position: relative;
        z-index: 2;
      }
    }
    @include commmon-styles;
    @extend .nok-image-natural-fit-height;

  }
}

/*
.size-large:not(.alignleft):not(.alignright) {
  @include cover-image;
  img {
    @include components-base.nok-subtle-shadow;
  }
}*/

.nok-faded-background {
  position: relative;
  &::before {
    content: "";
    background: var(--bg-image);
    mask-image: linear-gradient(to right, transparent, #000);
    background-size: cover;
    background-position: center;
    display: block;
    position: absolute;
    width: 50%;
    height: 100%;
    right: 0;
    top: 0;
    bottom: 0;
    opacity: 0.7;
  }
}

